# gdserial

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  MACOS_SECURITY.md  OPTIMIZATIONS.md  README.md  README.pt-BR.md  README.zh-CN.md  RELEASE_NOTES.md  TESTING.md  build_cross_platform.sh  build_release.bat  build_release.sh  copy_addon.bat  copy_addon.sh  create_release.md  example.gd  test_serial.rs
.cargo/: config.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: alpha-release.yml  ci.yml  release.yml  release.yml.draft
.serena/: project.yml
.serena/memories/: issue_12_investigation.md
addons/gdserial/: README.md  gdserial.gdextension  plugin.cfg
arduino_example/: README.md  arduino_communication.gd  arduino_example.ino
example/: QUICK_START.md  README.md  TESTING.md  THREAD_EXAMPLE_GUIDE.md  main.gd  main.gd.uid  main.tscn  menu.gd  menu.gd.uid  menu.tscn  project.godot  simple_example.gd  simple_example.gd.uid  simple_example.tscn  thread_example.gd  thread_example.gd.uid  thread_example.tscn
examples/: arduino_monitor.rs  bytes_to_read_test.rs  test_serial.rs
release/addons/gdserial/: gdserial.gdextension
src/: lib.rs
