[package]
name = "gdserial"
version = "0.2.6"
edition = "2021"
description = "Serial communication library for Godot 4 with PySerial-like API - Arduino, sensors, IoT integration"
license = "MIT"
repository = "https://github.com/SujithChristopher/gdserial"
keywords = ["godot", "serial", "arduino", "iot", "communication", "gamedev", "sensors"]
categories = ["game-development", "hardware-support", "api-bindings"]
authors = ["Sujith Christopher"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Pin to specific commit for reproducible builds instead of moving "master" branch
godot = { git = "https://github.com/godot-rust/gdext", rev = "c6be825f" }
serialport = "4.8.1"
